<resources>
    <string name="app_name">ReaderDiary</string>
    <string name="bem_vindo_ao_readerdiary">ReaderDiary</string>
    <string name="abrir">Abrir</string>
    <string name="fechar">Fechar</string>
    <string name="email">Email:</string>
    <string name="logar">Logar</string>
    <string name="cadastre_se">cadastre-se</string>
    <string name="titulo">Titulo:</string>
    <string name="autor">Autor:</string>
    <string name="genero">Genero:</string>
    <string name="ano">Ano</string>
    <string name="senha">Senha:</string>
    <string name="editar">Editar</string>
    <string name="avaliar">Avaliar</string>
    <string name="clique_no_bot_o_para_adicionar_novos_livros">Clique no botão para adicionar novos livros!</string>
    <string name="salvar_livro">Salvar Livro</string>
    <string name="digite_uma_senha">Digite uma senha:</string>
    <string name="cancelar">Cancelar</string>
    <string name="digite_sua_senha">Digite sua senha:</string>
    <string name="digite_seu_email">Digite seu Email:</string>
    <string name="digite_seu_nome">Digite seu nome:</string>
    <string name="ano_de_publica_o">Ano de Publicação:</string>
    <string name="sair">sair</string>
    <string name="p_gina_atual">Página Atual:</string>
    <string name="numero_de_p_ginas">Número de páginas:</string>
    <string name="n_mero_de_c_pitulos">Número de cápitulos:</string>
    <string name="insira_p_gina_atual">Insira página atual:</string>
    <string name="insira_c_pitulo_atual">Insira cápitulo atual:</string>
    <string name="_300">/300</string>
    <string name="livros_de_interesse">Livros de interesse</string>
    <string name="livros_lidos">Livros Lidos</string>
    <string name="ainda_n_o_possui_conta_cadastre_se_agora">Ainda não possui conta ? cadastre-se agora!</string>
    <string name="_0">0</string>
    <string name="digite_titulo_do_capitulo">Digite titulo do capitulo:</string>
    <string name="comentarios_sobre_o_c_pitulo">Comentarios sobre o cápitulo:</string>
    <string name="status">Status:</string>
    <string name="selecione_status_do_livro">Selecione Status do livro -> </string>
    <string name="iniciado_em">Iniciado em:</string>
    <string name="terminado_em">Terminado em:</string>
    <string name="data_de_inicio">Data de inicio da leitura -> </string>
    <string name="data_de_termino">Data de termino da leitura -> </string>
    <string name="coment_rios_sobre_o_c_pitulo">Comentários(max 250):</string>
</resources>
