<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/paper_bg"
    tools:context="com.example.paulo_000.readerdiary.UI.CadastroActivity">

    <EditText
        android:id="@+id/cd_nome"
        android:hint="@string/digite_seu_nome"
        android:textColorHint="@color/black"
        android:background="@drawable/moldura"
        android:inputType="text"
        android:maxLength="50"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"/>

    <EditText
        android:id="@+id/cd_email"
        android:hint="@string/digite_seu_email"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:background="@drawable/moldura"
        android:maxLength="50"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"/>

    <EditText
        android:id="@+id/cd_senha"
        android:hint="@string/digite_sua_senha"
        android:background="@drawable/moldura"
        android:textColorHint="@color/black"
        android:textStyle="italic"
        android:inputType="textPassword"
        android:maxLength="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"/>

    <Button
        android:text="Cadastrar"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cadastrar"/>

    <Button
        android:text="@string/cancelar"
        android:layout_marginVertical="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cancelar"/>



</LinearLayout>
